made the REGISTER HERE link big

--- a/agenda.html
+++ b/agenda.html
@@ -200,7 +200,7 @@ summary {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#nlchwekmax .gt_table {
+#vtdvdtejhk .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -225,7 +225,7 @@ summary {
   border-left-color: #D3D3D3;
 }
 
-#nlchwekmax .gt_heading {
+#vtdvdtejhk .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -237,7 +237,7 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#nlchwekmax .gt_title {
+#vtdvdtejhk .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -247,7 +247,7 @@ summary {
   border-bottom-width: 0;
 }
 
-#nlchwekmax .gt_subtitle {
+#vtdvdtejhk .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -257,13 +257,13 @@ summary {
   border-top-width: 0;
 }
 
-#nlchwekmax .gt_bottom_border {
+#vtdvdtejhk .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#nlchwekmax .gt_col_headings {
+#vtdvdtejhk .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -278,7 +278,7 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#nlchwekmax .gt_col_heading {
+#vtdvdtejhk .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -298,7 +298,7 @@ summary {
   overflow-x: hidden;
 }
 
-#nlchwekmax .gt_column_spanner_outer {
+#vtdvdtejhk .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -310,15 +310,15 @@ summary {
   padding-right: 4px;
 }
 
-#nlchwekmax .gt_column_spanner_outer:first-child {
+#vtdvdtejhk .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#nlchwekmax .gt_column_spanner_outer:last-child {
+#vtdvdtejhk .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#nlchwekmax .gt_column_spanner {
+#vtdvdtejhk .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -330,7 +330,7 @@ summary {
   width: 100%;
 }
 
-#nlchwekmax .gt_group_heading {
+#vtdvdtejhk .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -352,7 +352,7 @@ summary {
   vertical-align: middle;
 }
 
-#nlchwekmax .gt_empty_group_heading {
+#vtdvdtejhk .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -367,15 +367,15 @@ summary {
   vertical-align: middle;
 }
 
-#nlchwekmax .gt_from_md > :first-child {
+#vtdvdtejhk .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#nlchwekmax .gt_from_md > :last-child {
+#vtdvdtejhk .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#nlchwekmax .gt_row {
+#vtdvdtejhk .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -394,7 +394,7 @@ summary {
   overflow-x: hidden;
 }
 
-#nlchwekmax .gt_stub {
+#vtdvdtejhk .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -406,7 +406,7 @@ summary {
   padding-left: 12px;
 }
 
-#nlchwekmax .gt_summary_row {
+#vtdvdtejhk .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -416,7 +416,7 @@ summary {
   padding-right: 5px;
 }
 
-#nlchwekmax .gt_first_summary_row {
+#vtdvdtejhk .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -426,7 +426,7 @@ summary {
   border-top-color: #D3D3D3;
 }
 
-#nlchwekmax .gt_grand_summary_row {
+#vtdvdtejhk .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -436,7 +436,7 @@ summary {
   padding-right: 5px;
 }
 
-#nlchwekmax .gt_first_grand_summary_row {
+#vtdvdtejhk .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -446,11 +446,11 @@ summary {
   border-top-color: #D3D3D3;
 }
 
-#nlchwekmax .gt_striped {
+#vtdvdtejhk .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#nlchwekmax .gt_table_body {
+#vtdvdtejhk .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -459,7 +459,7 @@ summary {
   border-bottom-color: #D3D3D3;
 }
 
-#nlchwekmax .gt_footnotes {
+#vtdvdtejhk .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -473,13 +473,13 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#nlchwekmax .gt_footnote {
+#vtdvdtejhk .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#nlchwekmax .gt_sourcenotes {
+#vtdvdtejhk .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -493,46 +493,46 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#nlchwekmax .gt_sourcenote {
+#vtdvdtejhk .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#nlchwekmax .gt_left {
+#vtdvdtejhk .gt_left {
   text-align: left;
 }
 
-#nlchwekmax .gt_center {
+#vtdvdtejhk .gt_center {
   text-align: center;
 }
 
-#nlchwekmax .gt_right {
+#vtdvdtejhk .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#nlchwekmax .gt_font_normal {
+#vtdvdtejhk .gt_font_normal {
   font-weight: normal;
 }
 
-#nlchwekmax .gt_font_bold {
+#vtdvdtejhk .gt_font_bold {
   font-weight: bold;
 }
 
-#nlchwekmax .gt_font_italic {
+#vtdvdtejhk .gt_font_italic {
   font-style: italic;
 }
 
-#nlchwekmax .gt_super {
+#vtdvdtejhk .gt_super {
   font-size: 65%;
 }
 
-#nlchwekmax .gt_footnote_marks {
+#vtdvdtejhk .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="nlchwekmax" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="vtdvdtejhk" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   <thead class="gt_header">
     <tr>
       <th colspan="3" class="gt_heading gt_title gt_font_normal" style>29 Apr 2021</th>
@@ -573,7 +573,7 @@ summary {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#zmwbagtzan .gt_table {
+#amlawntpbu .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -598,7 +598,7 @@ summary {
   border-left-color: #D3D3D3;
 }
 
-#zmwbagtzan .gt_heading {
+#amlawntpbu .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -610,7 +610,7 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#zmwbagtzan .gt_title {
+#amlawntpbu .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -620,7 +620,7 @@ summary {
   border-bottom-width: 0;
 }
 
-#zmwbagtzan .gt_subtitle {
+#amlawntpbu .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -630,13 +630,13 @@ summary {
   border-top-width: 0;
 }
 
-#zmwbagtzan .gt_bottom_border {
+#amlawntpbu .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#zmwbagtzan .gt_col_headings {
+#amlawntpbu .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -651,7 +651,7 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#zmwbagtzan .gt_col_heading {
+#amlawntpbu .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -671,7 +671,7 @@ summary {
   overflow-x: hidden;
 }
 
-#zmwbagtzan .gt_column_spanner_outer {
+#amlawntpbu .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -683,15 +683,15 @@ summary {
   padding-right: 4px;
 }
 
-#zmwbagtzan .gt_column_spanner_outer:first-child {
+#amlawntpbu .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#zmwbagtzan .gt_column_spanner_outer:last-child {
+#amlawntpbu .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#zmwbagtzan .gt_column_spanner {
+#amlawntpbu .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -703,7 +703,7 @@ summary {
   width: 100%;
 }
 
-#zmwbagtzan .gt_group_heading {
+#amlawntpbu .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -725,7 +725,7 @@ summary {
   vertical-align: middle;
 }
 
-#zmwbagtzan .gt_empty_group_heading {
+#amlawntpbu .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -740,15 +740,15 @@ summary {
   vertical-align: middle;
 }
 
-#zmwbagtzan .gt_from_md > :first-child {
+#amlawntpbu .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#zmwbagtzan .gt_from_md > :last-child {
+#amlawntpbu .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#zmwbagtzan .gt_row {
+#amlawntpbu .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -767,7 +767,7 @@ summary {
   overflow-x: hidden;
 }
 
-#zmwbagtzan .gt_stub {
+#amlawntpbu .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -779,7 +779,7 @@ summary {
   padding-left: 12px;
 }
 
-#zmwbagtzan .gt_summary_row {
+#amlawntpbu .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -789,7 +789,7 @@ summary {
   padding-right: 5px;
 }
 
-#zmwbagtzan .gt_first_summary_row {
+#amlawntpbu .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -799,7 +799,7 @@ summary {
   border-top-color: #D3D3D3;
 }
 
-#zmwbagtzan .gt_grand_summary_row {
+#amlawntpbu .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -809,7 +809,7 @@ summary {
   padding-right: 5px;
 }
 
-#zmwbagtzan .gt_first_grand_summary_row {
+#amlawntpbu .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -819,11 +819,11 @@ summary {
   border-top-color: #D3D3D3;
 }
 
-#zmwbagtzan .gt_striped {
+#amlawntpbu .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#zmwbagtzan .gt_table_body {
+#amlawntpbu .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -832,7 +832,7 @@ summary {
   border-bottom-color: #D3D3D3;
 }
 
-#zmwbagtzan .gt_footnotes {
+#amlawntpbu .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -846,13 +846,13 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#zmwbagtzan .gt_footnote {
+#amlawntpbu .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#zmwbagtzan .gt_sourcenotes {
+#amlawntpbu .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -866,46 +866,46 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#zmwbagtzan .gt_sourcenote {
+#amlawntpbu .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#zmwbagtzan .gt_left {
+#amlawntpbu .gt_left {
   text-align: left;
 }
 
-#zmwbagtzan .gt_center {
+#amlawntpbu .gt_center {
   text-align: center;
 }
 
-#zmwbagtzan .gt_right {
+#amlawntpbu .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#zmwbagtzan .gt_font_normal {
+#amlawntpbu .gt_font_normal {
   font-weight: normal;
 }
 
-#zmwbagtzan .gt_font_bold {
+#amlawntpbu .gt_font_bold {
   font-weight: bold;
 }
 
-#zmwbagtzan .gt_font_italic {
+#amlawntpbu .gt_font_italic {
   font-style: italic;
 }
 
-#zmwbagtzan .gt_super {
+#amlawntpbu .gt_super {
   font-size: 65%;
 }
 
-#zmwbagtzan .gt_footnote_marks {
+#amlawntpbu .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="zmwbagtzan" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="amlawntpbu" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   <thead class="gt_header">
     <tr>
       <th colspan="3" class="gt_heading gt_title gt_font_normal" style>30 Apr 2021</th>
@@ -942,8 +942,11 @@ summary {
   
 </table></div>
 <hr />
-<p>This is a virtual event. Please register <a href="https://www.eventbrite.com/e/wids-boston-2021-tickets-151146851301">here</a>.</p>
+<p>This is a virtual event.</p>
+<div id="register-here." class="section level4" style="color: green">
+<h4 style="color: green"><a href="https://www.eventbrite.com/e/wids-boston-2021-tickets-151146851301" style="color: GREEN">REGISTER HERE</a>.</h4>
 <hr />
+</div>
 <div id="talk-details" class="section level3">
 <h3>Talk Details</h3>
 <p><strong>Monica Ramirez - Community Science and Data Integration to Address Environmental Health Disparities</strong></p>
