index and agenda updated as Sara S cannot present

--- a/agenda.html
+++ b/agenda.html
@@ -201,7 +201,7 @@ summary {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#mgtronzqfv .gt_table {
+#yqlvyzwjfy .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -226,7 +226,7 @@ summary {
   border-left-color: #D3D3D3;
 }
 
-#mgtronzqfv .gt_heading {
+#yqlvyzwjfy .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -238,7 +238,7 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#mgtronzqfv .gt_title {
+#yqlvyzwjfy .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -248,7 +248,7 @@ summary {
   border-bottom-width: 0;
 }
 
-#mgtronzqfv .gt_subtitle {
+#yqlvyzwjfy .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -258,13 +258,13 @@ summary {
   border-top-width: 0;
 }
 
-#mgtronzqfv .gt_bottom_border {
+#yqlvyzwjfy .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#mgtronzqfv .gt_col_headings {
+#yqlvyzwjfy .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -279,7 +279,7 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#mgtronzqfv .gt_col_heading {
+#yqlvyzwjfy .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -299,7 +299,7 @@ summary {
   overflow-x: hidden;
 }
 
-#mgtronzqfv .gt_column_spanner_outer {
+#yqlvyzwjfy .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -311,15 +311,15 @@ summary {
   padding-right: 4px;
 }
 
-#mgtronzqfv .gt_column_spanner_outer:first-child {
+#yqlvyzwjfy .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#mgtronzqfv .gt_column_spanner_outer:last-child {
+#yqlvyzwjfy .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#mgtronzqfv .gt_column_spanner {
+#yqlvyzwjfy .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -331,7 +331,7 @@ summary {
   width: 100%;
 }
 
-#mgtronzqfv .gt_group_heading {
+#yqlvyzwjfy .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -353,7 +353,7 @@ summary {
   vertical-align: middle;
 }
 
-#mgtronzqfv .gt_empty_group_heading {
+#yqlvyzwjfy .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -368,15 +368,15 @@ summary {
   vertical-align: middle;
 }
 
-#mgtronzqfv .gt_from_md > :first-child {
+#yqlvyzwjfy .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#mgtronzqfv .gt_from_md > :last-child {
+#yqlvyzwjfy .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#mgtronzqfv .gt_row {
+#yqlvyzwjfy .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -395,7 +395,7 @@ summary {
   overflow-x: hidden;
 }
 
-#mgtronzqfv .gt_stub {
+#yqlvyzwjfy .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -407,7 +407,7 @@ summary {
   padding-left: 12px;
 }
 
-#mgtronzqfv .gt_summary_row {
+#yqlvyzwjfy .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -417,7 +417,7 @@ summary {
   padding-right: 5px;
 }
 
-#mgtronzqfv .gt_first_summary_row {
+#yqlvyzwjfy .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -427,7 +427,7 @@ summary {
   border-top-color: #D3D3D3;
 }
 
-#mgtronzqfv .gt_grand_summary_row {
+#yqlvyzwjfy .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -437,7 +437,7 @@ summary {
   padding-right: 5px;
 }
 
-#mgtronzqfv .gt_first_grand_summary_row {
+#yqlvyzwjfy .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -447,11 +447,11 @@ summary {
   border-top-color: #D3D3D3;
 }
 
-#mgtronzqfv .gt_striped {
+#yqlvyzwjfy .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#mgtronzqfv .gt_table_body {
+#yqlvyzwjfy .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -460,7 +460,7 @@ summary {
   border-bottom-color: #D3D3D3;
 }
 
-#mgtronzqfv .gt_footnotes {
+#yqlvyzwjfy .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -474,13 +474,13 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#mgtronzqfv .gt_footnote {
+#yqlvyzwjfy .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#mgtronzqfv .gt_sourcenotes {
+#yqlvyzwjfy .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -494,46 +494,46 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#mgtronzqfv .gt_sourcenote {
+#yqlvyzwjfy .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#mgtronzqfv .gt_left {
+#yqlvyzwjfy .gt_left {
   text-align: left;
 }
 
-#mgtronzqfv .gt_center {
+#yqlvyzwjfy .gt_center {
   text-align: center;
 }
 
-#mgtronzqfv .gt_right {
+#yqlvyzwjfy .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#mgtronzqfv .gt_font_normal {
+#yqlvyzwjfy .gt_font_normal {
   font-weight: normal;
 }
 
-#mgtronzqfv .gt_font_bold {
+#yqlvyzwjfy .gt_font_bold {
   font-weight: bold;
 }
 
-#mgtronzqfv .gt_font_italic {
+#yqlvyzwjfy .gt_font_italic {
   font-style: italic;
 }
 
-#mgtronzqfv .gt_super {
+#yqlvyzwjfy .gt_super {
   font-size: 65%;
 }
 
-#mgtronzqfv .gt_footnote_marks {
+#yqlvyzwjfy .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="mgtronzqfv" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="yqlvyzwjfy" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   <thead class="gt_header">
     <tr>
       <th colspan="3" class="gt_heading gt_title gt_font_normal" style>29 Apr 2021</th>
@@ -574,7 +574,7 @@ summary {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#apkviuuqsq .gt_table {
+#batkdxnfxu .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -599,7 +599,7 @@ summary {
   border-left-color: #D3D3D3;
 }
 
-#apkviuuqsq .gt_heading {
+#batkdxnfxu .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -611,7 +611,7 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#apkviuuqsq .gt_title {
+#batkdxnfxu .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -621,7 +621,7 @@ summary {
   border-bottom-width: 0;
 }
 
-#apkviuuqsq .gt_subtitle {
+#batkdxnfxu .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -631,13 +631,13 @@ summary {
   border-top-width: 0;
 }
 
-#apkviuuqsq .gt_bottom_border {
+#batkdxnfxu .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#apkviuuqsq .gt_col_headings {
+#batkdxnfxu .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -652,7 +652,7 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#apkviuuqsq .gt_col_heading {
+#batkdxnfxu .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -672,7 +672,7 @@ summary {
   overflow-x: hidden;
 }
 
-#apkviuuqsq .gt_column_spanner_outer {
+#batkdxnfxu .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -684,15 +684,15 @@ summary {
   padding-right: 4px;
 }
 
-#apkviuuqsq .gt_column_spanner_outer:first-child {
+#batkdxnfxu .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#apkviuuqsq .gt_column_spanner_outer:last-child {
+#batkdxnfxu .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#apkviuuqsq .gt_column_spanner {
+#batkdxnfxu .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -704,7 +704,7 @@ summary {
   width: 100%;
 }
 
-#apkviuuqsq .gt_group_heading {
+#batkdxnfxu .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -726,7 +726,7 @@ summary {
   vertical-align: middle;
 }
 
-#apkviuuqsq .gt_empty_group_heading {
+#batkdxnfxu .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -741,15 +741,15 @@ summary {
   vertical-align: middle;
 }
 
-#apkviuuqsq .gt_from_md > :first-child {
+#batkdxnfxu .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#apkviuuqsq .gt_from_md > :last-child {
+#batkdxnfxu .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#apkviuuqsq .gt_row {
+#batkdxnfxu .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -768,7 +768,7 @@ summary {
   overflow-x: hidden;
 }
 
-#apkviuuqsq .gt_stub {
+#batkdxnfxu .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -780,7 +780,7 @@ summary {
   padding-left: 12px;
 }
 
-#apkviuuqsq .gt_summary_row {
+#batkdxnfxu .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -790,7 +790,7 @@ summary {
   padding-right: 5px;
 }
 
-#apkviuuqsq .gt_first_summary_row {
+#batkdxnfxu .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -800,7 +800,7 @@ summary {
   border-top-color: #D3D3D3;
 }
 
-#apkviuuqsq .gt_grand_summary_row {
+#batkdxnfxu .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -810,7 +810,7 @@ summary {
   padding-right: 5px;
 }
 
-#apkviuuqsq .gt_first_grand_summary_row {
+#batkdxnfxu .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -820,11 +820,11 @@ summary {
   border-top-color: #D3D3D3;
 }
 
-#apkviuuqsq .gt_striped {
+#batkdxnfxu .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#apkviuuqsq .gt_table_body {
+#batkdxnfxu .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -833,7 +833,7 @@ summary {
   border-bottom-color: #D3D3D3;
 }
 
-#apkviuuqsq .gt_footnotes {
+#batkdxnfxu .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -847,13 +847,13 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#apkviuuqsq .gt_footnote {
+#batkdxnfxu .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#apkviuuqsq .gt_sourcenotes {
+#batkdxnfxu .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -867,46 +867,46 @@ summary {
   border-right-color: #D3D3D3;
 }
 
-#apkviuuqsq .gt_sourcenote {
+#batkdxnfxu .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#apkviuuqsq .gt_left {
+#batkdxnfxu .gt_left {
   text-align: left;
 }
 
-#apkviuuqsq .gt_center {
+#batkdxnfxu .gt_center {
   text-align: center;
 }
 
-#apkviuuqsq .gt_right {
+#batkdxnfxu .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#apkviuuqsq .gt_font_normal {
+#batkdxnfxu .gt_font_normal {
   font-weight: normal;
 }
 
-#apkviuuqsq .gt_font_bold {
+#batkdxnfxu .gt_font_bold {
   font-weight: bold;
 }
 
-#apkviuuqsq .gt_font_italic {
+#batkdxnfxu .gt_font_italic {
   font-style: italic;
 }
 
-#apkviuuqsq .gt_super {
+#batkdxnfxu .gt_super {
   font-size: 65%;
 }
 
-#apkviuuqsq .gt_footnote_marks {
+#batkdxnfxu .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="apkviuuqsq" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="batkdxnfxu" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   <thead class="gt_header">
     <tr>
       <th colspan="3" class="gt_heading gt_title gt_font_normal" style>30 Apr 2021</th>
@@ -929,12 +929,7 @@ summary {
       <td class="gt_row gt_left">Nutrition</td>
     </tr>
     <tr>
-      <td class="gt_row gt_left">12:40 - 1:10 pm</td>
-      <td class="gt_row gt_left">Sara Saperstein, MassMutual</td>
-      <td class="gt_row gt_left">Cybersecurity</td>
-    </tr>
-    <tr>
-      <td class="gt_row gt_left">1:10 - 1:30 pm</td>
+      <td class="gt_row gt_left">12:45 - 1:15 pm</td>
       <td class="gt_row gt_left">Elvira Osuna-Highley, Mathworks</td>
       <td class="gt_row gt_left">High-throughput Imaging</td>
     </tr>
@@ -979,8 +974,6 @@ h1, h2, h3 {
 <p>Abstract - This work presents an EMG-based facial gesture recognition platform. The system integrates a custom-designed EMG sensor interface for energy-efficient signal acquisition from a small footprint. The gesture recognition algorithm achieves the classification of resting, clenching, chewing, and jaw opening activities in real-time. A wavelet-transform-based feature extraction improves the computational efficiency of the machine learning algorithm.</p>
 <p><span class="speaker-name"><strong>Maura Walker - Data science applications to facilitate precision nutrition for disease prevention</strong></span></p>
 <p>Abstract - The field of Nutrition Science is fraught with low-quality research leading to changing guidelines and consumer confusion. Dr. Walker will discuss how data science has reshaped the way we conduct nutrition research and the promise for data science applications to facilitate precision nutrition for disease prevention.</p>
-<p><span class="speaker-name"><strong>Sara Saperstein - Using data science and analytics together for effective enterprise cyber security decision making</strong></span></p>
-<p>Abstract - Data science and data analytics provide powerful tools for enterprise cyber security but organizations often struggle to leverage them effectively. Two of the major challenges include: where to leverage data science models and how to evaluate their effectiveness. This talk will showcase some of the approaches used at MassMutual to assess threats, develop unconventional controls using machine learning models, and evaluate the effectiveness of controls at mitigating the top risks to the organization. This approach enables evidence-based decision making, leading to stronger trust in the cyber security program.</p>
 <p><span class="speaker-name"><strong>Elvira Osuna-Highley - Applying machine learning to fluorescence microscope images</strong></span></p>
 <p>Abstract- This session will discuss approaches to analyzing large-scale image collections for the purpose of studying subcellular location. High-throughput imaging techniques and unsupervised machine learning methods were used to analyze NIH 3T3 cell clones. Analysis of these cell clones expressing different tagged proteins suggests that approximately 40 protein patterns are distinguishable under the high-throughput imaging conditions used.</p>
 <hr />
